http-app-routing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site
  template:
    metadata:
      labels:
        app: site
    spec:
      containers:
      - name: site
        image: donascimentomarcelo/app-aws:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
