http-app-routing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-service
spec:
  type: ClusterIP
  selector:
    app: site
  ports:
  - port: 80
