http-app-routing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
  labels:
    name: site
spec:
  rules:
  - host: site.ddefced1dcb542c7b9b8.eastus.aksapp.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: site-service
            port: 
              number: 80
